
if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})


SET(LIBS ${LIBS} uio)


ADD_EXECUTABLE(lsuio lsuio.cpp)
TARGET_LINK_LIBRARIES(lsuio 
	${LIBS})
	
ADD_EXECUTABLE(readuio readuio.cpp)
TARGET_LINK_LIBRARIES(readuio 
	${LIBS})
	
	
#INSTALL(TARGETS stereo_demo DESTINATION bin)

